--- a/css/style.css
+++ b/css/style.css
@@ -104,6 +104,11 @@ main {
     display: none;
 }
 
+.service-title, .navigation-block, .info-block__content {
+    margin-left: 16px;
+    margin-top: 24px;
+} 
+
 .service-title {
     justify-content: start;
     margin-top: 24px;
@@ -135,7 +140,6 @@ main {
     line-height: 40px;
     letter-spacing: -0.6px;
     color: #1B1C21;
-    margin-left: 12px;
 }
 
 .navigation-block {
@@ -143,7 +147,6 @@ main {
     font-family: 'TT Lakes';
     font-weight: normal;
     font-style: normal;
-    margin-left: 18px;
 }
 
 .navigation-block__menu {
@@ -152,6 +155,7 @@ main {
     justify-content: start;
     padding: 0;
     margin-bottom: 0;
+    margin-top: 0;
     -ms-overflow-style: none;
     scrollbar-width: none;
 }
@@ -197,8 +201,7 @@ main {
     justify-content: start;
     cursor: pointer;
     border: none;
-    margin-top: 13px;
-    margin-left: 10px;
+    margin-top: 16px;
 }
 
 .info-block__content--button--text{
@@ -224,7 +227,6 @@ main {
     line-height: 18px;
     letter-spacing: 0.2px;
     color: #1B1C21;
-    margin-left: 16px;
 }
 
 
@@ -269,6 +271,10 @@ main {
 
     .sidebar::before {
         margin-top: 7em;
+    }
+
+    .service-title, .navigation-block, .info-block__content {
+        margin-left: 24px;
     }
 
 }
@@ -368,4 +374,7 @@ main {
         margin-top: 1.2em;
     }
     
+    .service-title, .navigation-block, .info-block__content {
+        margin-left: 32px;
+    }
 }
