--- a/css/style.css
+++ b/css/style.css
@@ -57,39 +57,21 @@ main {
     margin: auto;
 }
 
-.header__navigation, .header__navigation--right-menu, .header__navigation--left-menu, .service-title, 
-.navigation-block__menu, .info-block__content--button, .header__navigation--button {
+.header {
+    margin: 0 24px 0 24px;
+}
+
+.header__navigation, .header__navigation--right-menu, .header__navigation--left-menu {
     display: flex;
     align-items: center;
 }
 
-.info-block__content--button:hover, .navigation-block__menu--link:hover {
-    background-color: inherit;
-}
-
-.navigation-block__menu--link:active {
-    background-color: inherit;
-}
-
-.header__navigation--button:active {
+.navigation-block__menu--link:active, .header__navigation--button:active {
     background-color: inherit;
 }
 
 .header__navigation {
     justify-content: space-between;
-}
-
-.line, .first-line {
-    background: #EAEAEA;
-    border-radius: 1px;
-    width: 2px;
-    height: 32px;
-    margin-left: 20px;
-    margin-right: 20px;
-}
-
-.header__navigation--right-menu, .header__navigation--left-menu {
-    justify-content: space-around;
 }
 
 .header__navigation--button {
@@ -100,281 +82,56 @@ main {
     cursor: pointer;
 }
 
-.call, .chat, .profile, .first-line {
-    display: none;
-}
-
-.service-title, .navigation-block, .info-block__content {
-    margin-left: 16px;
-    margin-top: 24px;
-} 
-
-.service-title {
-    justify-content: start;
-    margin-top: 24px;
-    margin-top: 0;
-}
-
-.sidebar {
+.sidebar__header {
     position: absolute;
-    height: 676px;
+    width: 320px;
 }
 
-.sidebar::before {
-    content: "";
-    display: block;
-    width: 4px;
+.header__navigation--button {
+    background-color: #FF3E79;;
+    width: 40px;
     height: 40px;
-    background: #41F6D7;
-    border-radius: 0 20px 20px 0;
-    margin-top: 6.8em;
+    border-radius: 50%;
+    position: relative;
+    padding: 11px;
 }
 
-.checkstatus {
-    margin-right: 0;
+.search {
+    width: 17.06px;
 }
 
-.service-title__name {
-    font-family: 'TT Lakes';
-    font-size: 28px;
-    line-height: 40px;
-    letter-spacing: -0.6px;
-    color: #1B1C21;
+.burger:before {
+    content: "";
+    position: absolute;
+    display: block;
+    width: 21.75px;
+    height: 2.17px;
+    background-color: white;
+    border-radius: 1px;
+    transform: rotate(-45deg);
+    left: 22%;
+    top: 49%
 }
 
-.navigation-block {
-    white-space: nowrap;
-    font-family: 'TT Lakes';
-    font-weight: normal;
-    font-style: normal;
-}
-
-.navigation-block__menu {
-    overflow-x: scroll;
-    list-style-type: none;
-    justify-content: start;
-    padding: 0;
-    margin-bottom: 0;
-    margin-top: 0;
-    -ms-overflow-style: none;
-    scrollbar-width: none;
-}
-
-.navigation-block__menu--link {
-    display: inline-block;
-    font-size: 16px;
-    line-height: 24px;
-    letter-spacing: -0.2px;
-    color: #7E7E82;
-    text-decoration: none;
-    padding: 8px;
-    margin-right: 25px;
-}
-
-.active-link {
-    background: #FFFFFF;
-    border: 2px solid #B8FFEC;
-    border-radius: 6px;
-}
-
-.navigation-block__menu::-webkit-scrollbar {
-    overflow: hidden;
-}
-
-.header__navigation--button--text, .info-block__content--button--text {
-    font-size: 16px;
-    line-height: 24px;
-    letter-spacing: -0.2px;
-    color: #1B1C21;
-    font-family: 'TT Lakes';
-    color: #1B1C21;
-    font-weight: 500;
-    font-style: normal;
-    margin: 0;
-}
-
-.header__navigation--button--text {
-    display: none;
-}
-
-.info-block__content--button {
-    justify-content: start;
-    cursor: pointer;
-    border: none;
-    margin-top: 16px;
-}
-
-.info-block__content--button--text{
-    margin-left: 5px;
-}
-
-.info-block__banner--image {
-    width: 100%;
-    margin-top: 18px;
-}
-
-.info-block__content--button--image {
-    margin: 0;
-    width: 24px;
-}
-
-.info-block__content--text-block {
-    width: 288px;
-    height: 100px;
-    overflow: hidden;
-    font-family: 'TT Lakes';
-    font-size: 14px;
-    line-height: 18px;
-    letter-spacing: 0.2px;
-    color: #1B1C21;
+.burger::after {
+    content: "";
+    position: absolute;
+    display: block;
+    width: 21.75px;
+    height: 2.17px;
+    background-color: white;
+    border-radius: 1px;
+    transform: rotate(45deg);
+    left: 22%;
+    top: 49%
 }
 
 
 @media (min-width: 768px) {
-    .container {
-        min-width: 768px;
-    }
 
-    .call, .chat, .profile, .first-line {
-        display: block;
-    }
-
-    .profile, .burger {
-        margin-right: 0;
-    }
-
-    .header__navigation--button--text {
-        display: none;
-    }
-
-    .info-block {
-        display: flex;
-        align-items: start;
-        justify-content: space-between;
-    }
-    
-    .info-block__content--text-block {
-        height: 160px;
-        width: 312px;
-        overflow: hidden;
-    }
-
-    .info-block__banner--image {
-        width: 360px;
-        border-radius: 6px;
-        margin-bottom: 0;
-    }
-
-    .info-block__banner {
-        margin-top: 0;
-    }
-
-    .sidebar::before {
-        margin-top: 7em;
-    }
-
-    .service-title, .navigation-block, .info-block__content {
-        margin-left: 24px;
-    }
 
 }
 
 @media (min-width: 1120px) {
 
-
-    header {
-        background-color: #F8F8F8;
-    }
-
-    .container {
-        width: 1120px;
-    }
-
-    .header__navigation--left-menu {
-        display: none;
-    }
-
-    .call, .chat, .profile, .line {
-        display: none;
-    }
-
-    .info-block, .header {
-        display: flex;
-        align-items: start;
-        justify-content: space-between;
-    }
-
-    .header {
-        align-items: center;
-    }
-
-    .service-title {
-        order: -1;
-    }
-
-    .eader__navigation--right-menu p{
-        display: block;
-        font-family: 'TT Lakes';
-        font-size: 16px;
-        line-height: 24px;
-        letter-spacing: -0.2px;
-        color: #1B1C21;
-        margin-right: 8px;
-        margin-top: 0;
-        margin-bottom: 0;
-        font-weight: 600;
-        font-style: normal;
-    }
-
-    .header__navigation--button {
-        margin-left: 0;
-        margin-bottom: 0;
-        margin-top: 0;
-        background-color: inherit;
-    }
-
-    .navigation-block__menu {
-        flex-wrap: wrap;
-    }
-
-    .info-text a {
-        font-family: 'TT Lakes';
-        font-size: 16px;
-        line-height: 24px;
-        letter-spacing: -0.2px;
-        color: #7E7E82;
-    }
-
-    .info-block__content--text-block {
-        width: 500px;
-        height: 160px;
-        overflow: hidden;
-    }
-    
-    .info-block__banner--image {
-        width: 531.35px;
-        border-radius: 6px;
-        margin-bottom: 0;
-    }
-    
-    .info-block__banner {
-        margin-top: 0;
-    }
-
-    .header__navigation--button--text {
-        margin-right: 8px;
-        display: block;
-    }
-
-    .sidebar {
-        height: 1024px;
-    }
-    
-    .sidebar::before {
-        margin-top: 1.2em;
-    }
-    
-    .service-title, .navigation-block, .info-block__content {
-        margin-left: 32px;
-    }
 }
